
syntax = "proto3";

message EmailLoginRequest {
    DeviceType deviceType = 1;
    string osVersion = 2;
    string password = 3;
    string username = 4;
    string deviceName = 5;
    string deviceId = 6;
    
    enum DeviceType {
        IOS = 0;
        ANDROID = 1;
    }
}
